# ASVK-tg-scheduler-bot-core

./: .flake8  .gitignore  .pre-commit-config.yaml  Pipfile  README.md  config_reader.py  dodo.py  handlers.py  main.py  pyproject.toml
Bot/: TG_bot.pot  __main__.py  config.py  handlers.py  locale_util.py
Bot/locales/en_US.utf8/LC_MESSAGES/: TG_bot.mo  TG_bot.po
Bot/locales/en_US/LC_MESSAGES/: TG_bot.mo  TG_bot.po
Tests/: test_handlers.py
bot/: __init__.py  handlers.py  keyboards.py  main.py
doc/: API.rst  API_handlers.rst  conf.py  index.rst
src/: handlers.py  main.py  test_handlers.py
tests/: __init__.py  conftest.py  test_handlers.py
tests/test_handlers/: test_homework.py  test_registration.py
